--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -1,7 +1,56 @@
-﻿
+﻿@model IEnumerable<Department>
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>All Department</h1>
+<h1 class="text-primary">All Department</h1>
 
+<br />
+<br />
+
+<a asp-action="Create" asp-controller="Department" class="btn btn-success" style="background-color: #28a745; border-color: #28a745;">Create Department</a>
+
+<br />
+<br />
+
+@if (Model.Count() > 0)
+{
+    <table class="table table-hover table-striped">
+        <thead class="bg-secondary text-white">
+            <tr>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Date of Creation</th>
+                <th>Details</th>
+                <th>Update</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Code</td>
+                    <td>@item.Name</td>
+                    <td>@item.CreateAt</td>
+                    <td>
+                        <a asp-action="Details" class="btn" style="background-color: #17a2b8; color: white;">Details</a>
+                    </td>
+                    <td>
+                        <a asp-action="Edit" class="btn" style="background-color: #007bff; color: white;">Update</a>
+                    </td>
+                    <td>
+                        <a asp-action="Delete" class="btn" style="background-color: #8b0000; color: white;">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <div class="mt-4 alert alert-info">
+        <h4>There are no Departments :(</h4>
+    </div>
+}
