--- a/Company.PL/Views/Department/Delete.cshtml
+++ b/Company.PL/Views/Department/Delete.cshtml
@@ -1,16 +1,17 @@
 ﻿@model Department
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details Department</h1>
+<h1>Delete Department</h1>
 
 <br />
 <br />
 
+<form asp-action="Delete">
     <div class="my-3">
         <label asp-for="Code" class="col-form-label"></label>
-        <input asp-for="Code" class="form-control border-primary" readonly />
+        <input asp-for="Code" class="form-control border-primary"  readonly/>
     </div>
     <div class="my-3">
         <label asp-for="Name" class="col-form-label"></label>
@@ -22,6 +23,12 @@
     </div>
 
     <div class="my-3">
-        <a asp-action="Edit" asp-route-id =@Model.Id class="btn btn-primary">Edit</a>
+        <input type="submit" value="Delete" class="btn btn-success px-4" />
         <a asp-action="Index" class="btn btn-secondary px-4">Back To List</a>
     </div>
+</form>
+
+
+
+
+
