--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -38,10 +38,10 @@
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn" style="background-color: #17a2b8; color: white;">Details</a>
                     </td>
                     <td>
-                        <a asp-action="Edit" class="btn" style="background-color: #007bff; color: white;">Update</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn" style="background-color: #007bff; color: white;">Update</a>
                     </td>
                     <td>
-                        <a asp-action="Delete" class="btn" style="background-color: #8b0000; color: white;">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn" style="background-color: #8b0000; color: white;">Delete</a>
                     </td>
                 </tr>
             }
