Make View Better

--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -9,7 +9,9 @@
 <br />
 <br />
 
-<a asp-action="Create" asp-controller="Department" class="btn btn-success" style="background-color: #28a745; border-color: #28a745;">Create Department</a>
+<a asp-action="Create" asp-controller="Department" class="btn btn-outline-success px-4 fw-bold">
+    <i class="bi bi-plus-circle"></i> Create Department
+</a>
 
 <br />
 <br />
@@ -35,13 +37,19 @@
                     <td>@item.Name</td>
                     <td>@item.CreateAt</td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn" style="background-color: #17a2b8; color: white;">Details</a>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info text-white">
+                            <i class="bi bi-eye"></i> Details
+                        </a>
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn" style="background-color: #007bff; color: white;">Update</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary text-white">
+                            <i class="bi bi-pencil-square"></i> Update
+                        </a>
                     </td>
                     <td>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn" style="background-color: #8b0000; color: white;">Delete</a>
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger text-white">
+                            <i class="bi bi-trash"></i> Delete
+                        </a>
                     </td>
                 </tr>
             }
