--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -4,28 +4,33 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Department</h1>
+<h1 class="text-success fw-bold">
+    <i class="bi bi-plus-circle-fill"></i> Create New Department
+</h1>
+
 <br />
 
 <form asp-action="Create">
     <div class="my-3">
-        <label asp-for="Code" class="col-form-label"></label>
-        <input asp-for="Code" class="form-control border-primary" />
+        <label asp-for="Code" class="fw-bold text-success"></label>
+        <input asp-for="Code" class="form-control border-success" />
         <span asp-validation-for="Code" class="text-danger fw-bold"></span>
     </div>
     <div class="my-3">
-        <label asp-for="Name" class="col-form-label"></label>
-        <input asp-for="Name" class="form-control border-primary" />
+        <label asp-for="Name" class="fw-bold text-success"></label>
+        <input asp-for="Name" class="form-control border-success" />
         <span asp-validation-for="Name" class="text-danger fw-bold"></span>
     </div>
     <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-label"></label>
-        <input asp-for="CreateAt" class="form-control border-primary" />
+        <label asp-for="CreateAt" class="fw-bold text-success"></label>
+        <input asp-for="CreateAt" class="form-control border-success" />
         <span asp-validation-for="CreateAt" class="text-danger fw-bold"></span>
     </div>
 
     <div class="my-3">
-        <input type="submit" value="Create" class="btn btn-success px-4" />
-        <a asp-action="Index" class="btn btn-secondary px-4">Back To List</a>
+        <input type="submit" value="Create" class="btn btn-success fw-bold px-4" />
+        <a asp-action="Index" class="btn btn-outline-secondary px-4">
+            <i class="bi bi-arrow-left"></i> Back To List
+        </a>
     </div>
 </form>
