--- a/Company.PL/Views/Department/Details.cshtml
+++ b/Company.PL/Views/Department/Details.cshtml
@@ -3,25 +3,38 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details Department</h1>
+<h1 class="text-info fw-bold">
+    <i class="bi bi-info-circle-fill"></i> Department Details
+</h1>
 
-<br />
-<br />
+<div class="card shadow-lg mt-4 p-4">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="border rounded p-3 bg-light">
+                <label asp-for="Code" class="fw-bold text-info"></label>
+                <p class="form-control-plaintext text-dark">@Model.Code</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="border rounded p-3 bg-light">
+                <label asp-for="Name" class="fw-bold text-info"></label>
+                <p class="form-control-plaintext text-dark">@Model.Name</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="border rounded p-3 bg-light">
+                <label asp-for="CreateAt" class="fw-bold text-info"></label>
+                <p class="form-control-plaintext text-dark">@Model.CreateAt</p>
+            </div>
+        </div>
+    </div>
 
-    <div class="my-3">
-        <label asp-for="Code" class="col-form-label"></label>
-        <input asp-for="Code" class="form-control border-primary" readonly />
+    <div class="mt-4">
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning fw-bold px-4">
+            <i class="bi bi-pencil-square"></i> Edit
+        </a>
+        <a asp-action="Index" class="btn btn-outline-secondary px-4">
+            <i class="bi bi-arrow-left"></i> Back To List
+        </a>
     </div>
-    <div class="my-3">
-        <label asp-for="Name" class="col-form-label"></label>
-        <input asp-for="Name" class="form-control border-primary" readonly />
-    </div>
-    <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-label"></label>
-        <input asp-for="CreateAt" class="form-control border-primary" readonly />
-    </div>
-
-    <div class="my-3">
-        <a asp-action="Edit" asp-route-id =@Model.Id class="btn btn-primary">Edit</a>
-        <a asp-action="Index" class="btn btn-secondary px-4">Back To List</a>
-    </div>
+</div>
