--- a/Company.PL/Views/Department/Edit.cshtml
+++ b/Company.PL/Views/Department/Edit.cshtml
@@ -3,29 +3,29 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Department</h1>
+<h1 class="text-primary fw-bold">
+    <i class="bi bi-pencil-square"></i> Edit Department
+</h1>
 
 <form asp-action="Edit">
     <div class="my-3">
-        <label asp-for="Code" class="col-form-label"></label>
-        <input asp-for="Code" class="form-control border-primary" />
+        <label asp-for="Code" class="col-form-label text-primary"></label>
+        <input asp-for="Code" class="form-control border-info bg-light" />
         <span asp-validation-for="Code" class="text-danger fw-bold"></span>
     </div>
     <div class="my-3">
-        <label asp-for="Name" class="col-form-label"></label>
-        <input asp-for="Name" class="form-control border-primary" />
+        <label asp-for="Name" class="col-form-label text-primary"></label>
+        <input asp-for="Name" class="form-control border-info bg-light" />
         <span asp-validation-for="Name" class="text-danger fw-bold"></span>
     </div>
     <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-label"></label>
-        <input asp-for="CreateAt" class="form-control border-primary" />
+        <label asp-for="CreateAt" class="col-form-label text-primary"></label>
+        <input asp-for="CreateAt" class="form-control border-info bg-light" />
         <span asp-validation-for="CreateAt" class="text-danger fw-bold"></span>
     </div>
 
     <div class="my-3">
-        <input type="submit" value="Save" class="btn btn-success px-4" />
-        <a asp-action="Index" class="btn btn-secondary px-4">Back To List</a>
+        <input type="submit" value="Save Changes" class="btn btn-primary px-4 fw-bold" />
+        <a asp-action="Index" class="btn btn-outline-secondary px-4">Back To List</a>
     </div>
 </form>
-
-
