--- a/Company.PL/Views/Department/Create.cshtml
+++ b/Company.PL/Views/Department/Create.cshtml
@@ -11,26 +11,13 @@
 <br />
 
 <form asp-action="Create">
-    <div class="my-3">
-        <label asp-for="Code" class="fw-bold text-success"></label>
-        <input asp-for="Code" class="form-control border-success" />
-        <span asp-validation-for="Code" class="text-danger fw-bold"></span>
-    </div>
-    <div class="my-3">
-        <label asp-for="Name" class="fw-bold text-success"></label>
-        <input asp-for="Name" class="form-control border-success" />
-        <span asp-validation-for="Name" class="text-danger fw-bold"></span>
-    </div>
-    <div class="my-3">
-        <label asp-for="CreateAt" class="fw-bold text-success"></label>
-        <input asp-for="CreateAt" class="form-control border-success" />
-        <span asp-validation-for="CreateAt" class="text-danger fw-bold"></span>
-    </div>
-
-    <div class="my-3">
-        <input type="submit" value="Create" class="btn btn-success fw-bold px-4" />
-        <a asp-action="Index" class="btn btn-outline-secondary px-4">
-            <i class="bi bi-arrow-left"></i> Back To List
-        </a>
-    </div>
+    <partial name="_CreateEditPartialViewDept" />
 </form>
+
+
+
+@section ValidationSection
+{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
