--- a/Company.PL/Views/Department/Edit.cshtml
+++ b/Company.PL/Views/Department/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Department
+﻿@model CreateDtoDepartment
 @{
     ViewData["Title"] = "Edit";
 }
@@ -8,24 +8,13 @@
 </h1>
 
 <form asp-action="Edit">
-    <div class="my-3">
-        <label asp-for="Code" class="col-form-label text-primary"></label>
-        <input asp-for="Code" class="form-control border-info bg-light" />
-        <span asp-validation-for="Code" class="text-danger fw-bold"></span>
-    </div>
-    <div class="my-3">
-        <label asp-for="Name" class="col-form-label text-primary"></label>
-        <input asp-for="Name" class="form-control border-info bg-light" />
-        <span asp-validation-for="Name" class="text-danger fw-bold"></span>
-    </div>
-    <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-label text-primary"></label>
-        <input asp-for="CreateAt" class="form-control border-info bg-light" />
-        <span asp-validation-for="CreateAt" class="text-danger fw-bold"></span>
-    </div>
+    <partial name="_CreateEditPartialViewDept" />
 
-    <div class="my-3">
-        <input type="submit" value="Save Changes" class="btn btn-primary px-4 fw-bold" />
-        <a asp-action="Index" class="btn btn-outline-secondary px-4">Back To List</a>
-    </div>
 </form>
+
+
+@section ValidationSection
+{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
