--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -37,19 +37,7 @@
                     <td>@item.Name</td>
                     <td>@item.CreateAt</td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info text-white">
-                            <i class="bi bi-eye"></i> Details
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary text-white">
-                            <i class="bi bi-pencil-square"></i> Update
-                        </a>
-                    </td>
-                    <td>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger text-white">
-                            <i class="bi bi-trash"></i> Delete
-                        </a>
+                        <partial name="_ButtonPartiaView" model="@item.Id" />
                     </td>
                 </tr>
             }
