--- a/Company.PL/wwwroot/css/site.css
+++ b/Company.PL/wwwroot/css/site.css
@@ -20,3 +20,17 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.animation-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
+
+#riveCanvas {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    display: block;
+}
