Session 05 Use Mapper

--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateDtoEmployee
+﻿@model Employee
 
 @{
     ViewData["Title"] = "Create";
@@ -7,7 +7,7 @@
 <div class="container mt-4">
     <div class="card border-success shadow-lg">
         <div class="card-header bg-success text-white text-center fw-bold">
-            <i class="bi bi-plus-circle-fill"></i> Add New Employee
+            <i class="bi bi-plus-circle-fill"></i> Add New Employee 
         </div>
         <div class="card-body">
             <form asp-action="Create">
