--- a/Company.PL/Views/Employee/EmployeePartialView/_DeleteDetailsPartialView.cshtml
+++ b/Company.PL/Views/Employee/EmployeePartialView/_DeleteDetailsPartialView.cshtml
@@ -45,4 +45,8 @@
             <label asp-for="IsDeleted" class="fw-bold text-danger"></label>
         </div>
     </div>
+    <div class="col-md-6 my-2">
+        <label asp-for="Department" class="fw-bold text-danger"></label>
+        <input asp-for="Department.Name" class="form-control border-danger bg-light" readonly />
+    </div>
 </div>
