Use Security Module(Asyncronous)

--- a/Company.PL/Views/Employee/Details.cshtml
+++ b/Company.PL/Views/Employee/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model CreateDtoEmployee
 @{
     ViewData["Title"] = "Employee Details";
 }
@@ -21,3 +21,4 @@
             </div>
         </div>
     </div>
+
