--- a/Company.PL/Views/Employee/Create.cshtml
+++ b/Company.PL/Views/Employee/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model CreateDtoEmployee
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
             <i class="bi bi-plus-circle-fill"></i> Add New Employee 
         </div>
         <div class="card-body">
-            <form asp-action="Create">
+            <form asp-action="Create" enctype="multipart/form-data">
                
                 <partial name="EmployeePartialView/_CreateEditPartialView" />
 
