--- a/Company.PL/Views/Employee/Edit.cshtml
+++ b/Company.PL/Views/Employee/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model CreateDtoEmployee
 @{
     ViewData["Title"] = "Edit Employee";
 }
@@ -9,9 +9,10 @@
             <h2 class="fw-bold"><i class="bi bi-pencil-square"></i> Edit Employee</h2>
         </div>
         <div class="card-body p-4">
-            <form asp-action="Edit">
+            <form asp-action="Edit" enctype="multipart/form-data">
 
                 <partial name="EmployeePartialView/_CreateEditPartialView" />
+                <input asp-for="ImageName" hidden/>
 
                 <div class="mt-4 text-center">
                     <button type="submit" class="btn btn-primary fw-bold px-4 rounded-pill shadow">
