User And Role Controller With MVC

--- a/Company.PL/Views/Department/Index.cshtml
+++ b/Company.PL/Views/Department/Index.cshtml
@@ -37,7 +37,7 @@
                     <td>@item.Name</td>
                     <td>@item.CreateAt</td>
                     <td>
-                        <partial name="_ButtonPartiaView" model="@item.Id" />
+                        <partial name="_ButtonPartiaView" model="@item.Id.ToString()" />
                     </td>
                 </tr>
             }
