--- a/Company.PL/Views/Employee/Index.cshtml
+++ b/Company.PL/Views/Employee/Index.cshtml
@@ -93,7 +93,7 @@
                         <td>@item.Department.Name</td>
                     }
                     <td>
-                        <partial name="_ButtonPartiaView" model="@item.Id" />
+                        <partial name="_ButtonPartiaView" model="@item.Id.ToString()" />
                     </td>
                 </tr>
             }
