--- a/Company.PL/Views/Shared/_Layout.cshtml
+++ b/Company.PL/Views/Shared/_Layout.cshtml
@@ -58,9 +58,15 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Employee" asp-action="Index">Employee</a>
                         </li>
+                      
                     </ul>
-
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1"> 
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">Roles</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-light btn btn-danger"  asp-area="" asp-controller="Account" asp-action="SignOut">SignOut</a>
                         </li>
