--- a/Company.PL/Views/Account/SignIn.cshtml
+++ b/Company.PL/Views/Account/SignIn.cshtml
@@ -20,7 +20,11 @@
 			<input type="submit" value="SIGNIN">
 		</form>
 		<p>Don't have an Account? <a asp-action="SignUp">Create New Account</a></p>
-		<p> <a asp-action="ForgetPassword">Forget Password</a></p>
+		<br />
+		<p>
+			<a asp-action="ResetByPhoneOrEmail" class="forget-password-btn">Forget Password</a>
+		</p>
+
 	</div>
 </div>
 
