--- a/Company.PL/Views/Employee/EmployeePartialView/EmployeesTablePartialView.cshtml
+++ b/Company.PL/Views/Employee/EmployeePartialView/EmployeesTablePartialView.cshtml
@@ -1,41 +1,6 @@
 ﻿@model IEnumerable<Employee>
 
-@{
-    ViewData["Title"] = "Index";
-  
-}
 
-<h1 class="text-primary">All Employee</h1>
-
-@if (!string.IsNullOrEmpty(TempData["Message"] as string))
-{
-    <div id="alertMessage" class="m-3 alert alert-info">
-        <p>@TempData["Message"]</p>
-    </div>
-}
-
-<br />
-<br />
-
-
-<form class="d-flex align-items-center gap-2 p-3 bg-light rounded shadow-sm">
-
-    <input type="text" id="SearchEmployee" placeholder="Search By Name" name="SearchEmployee" class="form-control w-50" />
-
-    <button type="submit" class="btn btn-success">
-        <i class="fas fa-search"></i> Search
-    </button>
-
-</form>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
-<a asp-action="Create" asp-controller="Employee" class="btn btn-outline-success px-4 fw-bold">
-    <i class="bi bi-plus-circle"></i> Create Employee
-</a>
-
-<br />
-<br />
 
 @if (Model.Count() > 0)
 {
@@ -79,9 +44,12 @@
                     <td>@item.IsDeleted</td>
                     <td>@item.HiringDate</td>
                     <td>@item.CreateAt</td>
-                    @if(item.Department is null){
+                    @if (item.Department is null)
+                    {
                         <td>No Department</td>
-                    }else{
+                    }
+                    else
+                    {
                         <td>@item.Department.Name</td>
                     }
                     <td>
@@ -98,36 +66,3 @@ else
         <h4>There are no Employees :(</h4>
     </div>
 }
-
-<script>
-    setTimeout(function () {
-        var alertBox = document.getElementById("alertMessage");
-        if (alertBox) {
-            alertBox.style.transition = "opacity 1s";
-            alertBox.style.opacity = "0";
-            setTimeout(function () {
-                alertBox.style.display = "none";
-            }, 1000);
-        }
-    }, 3000);
-</script>
-
-<script>
-    const SearchBar = $('#SearchEmployee');
-    const table = $('table');
-
-    SearchBar.on('keyup', function (event) {
-        var searchvalue = SearchBar.val();
-        $.ajax({
-            url: '/Employee/Search',
-            type: 'GET',
-            data: { SearchEmployee: searchvalue },
-            success: function (result) {
-                table.html(result);
-            },
-            error: function (xhr, status, error) {
-                console.log(error);
-            }
-        });
-    });
-</script>
