--- a/Company.PL/Views/Shared/_AuthLayout.cshtml
+++ b/Company.PL/Views/Shared/_AuthLayout.cshtml
@@ -18,6 +18,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- web font -->
 	<link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 	<!-- //web font -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
 <body>
 	<!-- main -->
