--- a/Company.PL/wwwroot/css/site.css
+++ b/Company.PL/wwwroot/css/site.css
@@ -34,3 +34,19 @@ body {
     height: auto;
     display: block;
 }
+
+
+.forget-password-btn {
+    display: inline-block;
+    padding: 6px 12px;
+    background-color: #007bff; 
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+    .forget-password-btn:hover {
+        background-color: #0056b3; 
+    }
